  Metawidget ( http://www.metawidget.org )
  Mark James ( http://www.famfamfam.com/lab/icons/silk/ )
  ... Many more ...
  
 Thanks to the following contributors
 
  Thomas Breitkreuz for his H2 dialect, report templates and many good feature requests
  Thomas Winkler for his MSAccess dialect, testing, several bugfixes, usability enhancements, feature requests and implementation of CustomTypes

Release 1.0

* First support for editing domains, defaultvalues, tables and relations
* First support for reverse engineering of different JDBC datasources
* JDBC dialects available for MySQL, MySQL(InnoDB), MSSQL, Oracle , Postgres 
  and DB2

Release 1.0.1

* Tested reverse engineering with the following databases
  MSSQL Dialect  : Microsoft SQL Server Version 09.00.3042 ( JTDS JDBC - Driver 1.2.2 )
                   Microsoft SQL Server 08.00.2039 ( JTDS JDBC - Driver 1.2.2 )
  MySQL Dialect  : MySQL Version 5.0.45-community-nt (MySQL Connector 5.1.5 )
                   MySQL Version 4.1.22-community-nt (MySQL Connector 5.1.5 )
  Oracle Dialect : Oracle Database 10g Release 10.2.0.3.0 - Production ( Oracle 10 client )
* New JGraph Version ( Image Export is now working correctly )
* Added support for index editing
* Removed DB2 dialect ( no test environment available )
* Added generic JDBC dialect
* Added schema validation for loading ERDesigner models from file
* Added configuration files for dialect datatypes
     
Release 1.0.2

* First version including the SquirrelSQL plugin ( for Squirrel 2.6.4 )
* Added SquirrelDialect to interface with the Squirrel DatabaseMezaData API
* DOT Path ( AT&T Layout library ) is now configurable with preferences dialog
* Tested reverse engineering with the following databases
  PostgreSQL Dialect : PostgreSQL 8.2.6 ( JDBC3 Driver )
  
Release 1.1

* Refactored domain system for support of size, decimal digits and radix
* Added model modification tracker to track model changes
* Removed generic jdbc dialect